# SA-SocialGau

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-TW.md
datasets/: eth.json  hotel.json  zara1.json
include/: args.hpp  field_iface.hpp  io.hpp  metrics.hpp  predictor.hpp  sd_utils.hpp  types.hpp
src/: args.cpp  io.cpp  main.cpp  metrics.cpp  predictor.cpp  sd_utils.cpp
tests/: test_metrics.cpp
